src/objects/X_SBU_Commission__c.object
<CustomObject>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Line</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questionnaire_Setup__c</fullName>
        <label>Questionnaire Setup</label>
        <referenceTo>Questionnaire_Setup__c</referenceTo>
        <relationshipName>X_SBU_Commisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Demo Scheduled</fullName>
                </value>
                <value>
                    <fullName>Demo Completed</fullName>
                </value>
                <value>
                    <fullName>Customer Quoted</fullName>
                </value>
                <value>
                    <fullName>Customer Ordered</fullName>
                </value>
                <value>
                    <fullName>Customer Not Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>X-SBU Commission</label>
    <nameField>
        <displayFormat>xSBU{000000}</displayFormat>
        <label>Commission Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>X-SBU Commissions</pluralLabel>
    <recordTypes>
        <fullName>XSBU_Commission</fullName>
        <active>true</active>
        <label>XSBU Commission</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>